--- a/APIs/APIs.csproj
+++ b/APIs/APIs.csproj
@@ -13,6 +13,7 @@
 		<Optimize>false</Optimize>
 	</PropertyGroup>-->
   <ItemGroup>
+    <Folder Include="Infrastructure\" />
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
